[gd_scene load_steps=10 format=2]

[ext_resource path="res://Ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://buttonRight.png" type="Texture" id=3]
[ext_resource path="res://buttonLeft.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "center"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Ball:lane")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ 2 ]
}

[sub_resource type="Animation" id=2]
resource_name = "left"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Ball:lane")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "right"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Ball:lane")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 2, 50 )

[sub_resource type="ConcavePolygonShape" id=4]
data = PoolVector3Array( 1, 0, 25, -1, 0, 25, 1, 0, -25, -1, 0, 25, -1, 0, -25, 1, 0, -25 )

[node name="Game" type="Spatial"]
script = ExtResource( 2 )

[node name="Ball" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 7.824, -6.426 )
axis_lock_linear_z = true
lane = 3

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 320.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TouchScreenButton" parent="CanvasLayer/Control"]
position = Vector2( 240.498, 399.418 )
normal = ExtResource( 3 )

[node name="Left" type="TouchScreenButton" parent="CanvasLayer/Control"]
position = Vector2( 40.2594, 399.418 )
normal = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/center = SubResource( 1 )
anims/left = SubResource( 2 )
anims/right = SubResource( 5 )

[node name="Paths" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Paths"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 14.8474 )
mesh = SubResource( 3 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Paths/MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="Paths/MeshInstance/StaticBody"]
shape = SubResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="Paths"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 14.8474 )
mesh = SubResource( 3 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Paths/MeshInstance3"]

[node name="CollisionShape" type="CollisionShape" parent="Paths/MeshInstance3/StaticBody"]
shape = SubResource( 4 )

[node name="MeshInstance2" type="MeshInstance" parent="Paths"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 14.8474 )
mesh = SubResource( 3 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Paths/MeshInstance2"]

[node name="CollisionShape" type="CollisionShape" parent="Paths/MeshInstance2/StaticBody"]
shape = SubResource( 4 )

[node name="WallSpawns" type="Spatial" parent="."]

[node name="1" type="Spatial" parent="WallSpawns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 38.69 )

[node name="2" type="Spatial" parent="WallSpawns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 38.6902 )

[node name="3" type="Spatial" parent="WallSpawns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 38.69 )

[node name="SpawnWall" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="pressed" from="CanvasLayer/Control/Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Left" to="." method="_on_Left_pressed"]
[connection signal="timeout" from="SpawnWall" to="." method="_on_SpawnWall_timeout"]

[editable path="Ball"]
